# Converge

./: .gitignore  LICENSE  README.md  llm_providers.json.example  pyproject.toml
api/: __init__.py  declarative.py  server.py
core/: __init__.py  config.py
core/agent/: __init__.py  agent.py  multi_agent.py
core/runtime/: __init__.py  agent_runtime.py  human_intervention.py  planning.py  reconcile_loop.py  scheduler.py
core/state/: __init__.py  models.py  postgres_store.py  sqlite_store.py  state_store.py
core/workflow/: __init__.py  controller.py  workflow.py
errors/: __init__.py  exceptions.py
examples/: api_server_example.py  code_agent.py  cognitive_agent.py  multi_agent_workflow.py  simple_agent.py  specialist_agent.py  vague_goal_agent.py  web_research_agent.py
memory/: __init__.py  context_manager.py  episodic.py  scratchpad.py  working.py
namespace/: __init__.py  namespace.py
observability/: __init__.py  audit_log.py  metrics.py  tracer.py
probes/: __init__.py  confidence_probe.py  llm_quality_probe.py  loop_detector.py  quality_probe.py
skills/: __init__.py  base.py  registry.py
skills/builtin/: __init__.py  code_review.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_server.py
tests/unit/: __init__.py  test_agent_llm.py  test_audit_log.py  test_code_tools.py  test_confidence_probe.py  test_context_manager.py  test_episodic_memory.py  test_human_intervention.py  test_llm_planner.py  test_llm_quality_probe.py  test_loop_detector.py  test_metrics.py  test_namespace.py  (+14 more)
tools/: __init__.py  base.py  rbac.py  registry.py
(+10 files in other folders)
